# Advent_Of_Code_2025

day_10_Factory/: CMakeLists.txt
day_10_Factory/src/: part_1.c  part_2.c
day_11_Reactor/: CMakeLists.txt
day_11_Reactor/src/: part_1.c
day_12_Christmas_Tree_Farm/: CMakeLists.txt
day_12_Christmas_Tree_Farm/src/: part_1.c  part_2.c
day_1_Secret_Entrance/: CMakeLists.txt
day_1_Secret_Entrance/src/: main.c
day_2_Gift_Shop/: CMakeLists.txt
day_2_Gift_Shop/src/: main.c
day_3_Lobby/: CMakeLists.txt
day_3_Lobby/src/: main.c
day_4_Printing_Department/: CMakeLists.txt
day_4_Printing_Department/src/: main.c
day_5_Cafetaria/: CMakeLists.txt
day_5_Cafetaria/src/: part_1.c  part_2.c
day_6_Trash_Compactor/: CMakeLists.txt
day_6_Trash_Compactor/resources/: example.txt
day_6_Trash_Compactor/src/: part_1.c  part_2.c
day_7_Laboratories/: CMakeLists.txt
day_7_Laboratories/src/: part_1.c  part_2.c
day_8_Playground/: CMakeLists.txt
day_8_Playground/src/: part_1.c  part_2.c
day_9_Movie_Theater/: CMakeLists.txt
day_9_Movie_Theater/src/: part_1.c  part_2.c  part_2_old.c
